--- a/index.ipynb
+++ b/index.ipynb
@@ -88,8 +88,8 @@
    ],
    "source": [
     "print(three_x_y_at_one(3)) # 9\n",
-    "prithree_x_y_at_three(3))# 27\n",
-    "three_x_y_at_six(1) # 18\n",
+    "print(three_x_y_at_three(3))# 27\n",
+    "print(three_x_y_at_six(1) # 18\n",
     "three_x_y_at_six(2) # 36"
    ]
   },
