--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,7 @@
     "zero_to_four = list(range(0, 5))\n",
     "\n",
     "def y_values_for_at_one(x_values):\n",
-    "    return \n",
+    "    return li\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
     "    pass\n",
