--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
     "    return list(map(lambda x: three_x_y_at_one(x), x_values))\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
-    "    \n",
+    "    return list(map(lambda x: three_x_y_at_three(x), x_values))\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
     "    pass\n",
