Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2287,7 +2287,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
-    "    return 3*3"
+    "    return 3*6"
    ]
   },
   {
@@ -2297,7 +2297,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    pass"
+    "    retu"
    ]
   },
   {
