--- a/index.ipynb
+++ b/index.ipynb
@@ -2641,7 +2641,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return list(filter(lambda term: term_df_dx(term), list_of_terms))"
+    "    derivative_terms list(filter(lambda term: term_df_dx(term), list_of_terms))"
    ]
   },
   {
